# cmake-project-test

./: .gitignore  CMakeLists.txt
src/SharedLib/: CMakeLists.txt
src/SharedLib/include/: sharedlibrary.h
src/SharedLib/src/: sharedlibrary.cpp
src/StaticLib/: CMakeLists.txt
src/StaticLib/include/: staticlibrary.h
src/StaticLib/src/: staticlibrary.cpp
src/main/: CMakeLists.txt  main.cpp
